# Accordion_cpp

./: CMakeLists.txt  README.md  main.cpp
Connector/: PageSourceManager.hpp
DataSource/: DataFileDicts.hpp  SchemaManager.hpp
Descriptor/: FieldDesc.hpp  FilterDescriptor.hpp  ProjectDescriptor.hpp
Execution/Buffer/: LazyOutputBuffer.hpp  SimpleOutputBuffer.hpp  SimpleShuffleStageBuffer.hpp
Execution/Scheduler/: SqlQueryExecution.hpp  SqlStageExecution.hpp
Execution/Scheduler/QueryInfos/: StageInfo.hpp
Execution/Task/: ScheduledSplit.hpp  SqlTaskExecution.hpp  TaskSource.hpp
Execution/Task/Context/: DriverContext.h  TaskContext.h
Execution/Task/Fetcher/: TaskInfoFetcher.hpp
Execution/Task/TaskInfos/: TaskInfoDescriptor.hpp
NodeCluster/: Node.hpp
Nodes/Node/: AstNodeViewer.hpp  AstNodeVisit.hpp  AstNodeVisitor.hpp  AstTreeCleaner.hpp  ExprOuput.hpp  Node.h
Nodes/Node/Expression/: Expression.h  FunctionCall.hpp  Identifier.hpp  Literal.h
Nodes/Node/Expression/Literals/: Date32Literal.hpp  DayTimeIntervalLiteral.hpp  DoubleLiteral.hpp  Int32Literal.hpp  Int64Literal.hpp  StringLiteral.hpp
Nodes/Node/Serial/: NodeTreeDeserialization.hpp  NodeTreeSerialization.hpp
Nodes/PlanNode/: CrossJoinNode.hpp  ExchangeNode.hpp  FilterNode.hpp  FinalAggregationNode.hpp  LookupJoinNode.hpp  NodeVisitor.hpp  PartialAggregationNode.hpp  PlanNode.hpp  PlanNodeTree.hpp  PlanNodeTreeCleaner.hpp  PlanNodeTreeToJson.hpp  PlanNodeTreeToString.hpp  PlanNodeTreeViewer.hpp  ProjectNode.hpp  SortNode.hpp  TableScanNode.hpp  TopKNode.hpp
Nodes/PlanNode/Serial/: PlanNodeTreeDeserialization.hpp  PlanNodeTreeSerialization.hpp
Operators/: SortOperator.hpp
Operators/Join/: PartitionedLookupSource.hpp
Operators/LocalExchange/: ArbitaryExchanger.hpp
Planner/: Fragment.hpp  Fragmenter.hpp
Planner/LocalPlanner/: LocalPlanTreeAnalyzer.hpp  LogicalPipelineFactory.hpp
ProjectorAndFilter/: ExprAstFilter.hpp  ExprAstFilterComplier.hpp  ExprAstProjector.hpp  ExprAstProjectorComplier.hpp
Query/: QueryManager.hpp  RegQuery.h
Shell/: Shell.hpp
Split/: SplitSourceFactory.hpp
TpchTest/Querys/: Query2_NL.hpp  Query2_single.hpp
Utils/ConcurrentQueue/: blockingconcurrentqueue.h  concurrentqueue.h
Web/: QueryInterface.hpp
Web/Restful/: Server.hpp
accordion/Front/: control.html  index.html  result.html
accordion_tools/DFSMaker/: CMakeLists.txt
accordion_tools/httpConfigIpUpdater/: CMakeLists.txt
accordion_tools/partitionsMaker/: CMakeLists.txt
